errors.txt
F:\code\hello_world.cpp:5:1: error: expected ';' before 'int'
 int main(){
 ^~~
